# ece-6122-final-project

./: .gitignore  CMakeLists.txt  README.md  Raytracer.cpp  Raytracer.h  distclean.sh  movie.mpeg  raytracer  raytracer.cpp  run.sh  test.ipynb
docs/: Doxyfile
docs/html/html/: _arg_parser_8h.html  _arg_parser_8h.js  _arg_parser_8h__dep__incl.map  _arg_parser_8h__dep__incl.md5  _arg_parser_8h__incl.map  _arg_parser_8h__incl.md5  _arg_parser_8h_source.html  _color_8h.html  _color_8h__dep__incl.map  _color_8h__dep__incl.md5  _color_8h__incl.map  _color_8h__incl.md5  _color_8h_source.html  _face_8h.html  _face_8h__dep__incl.map  _face_8h__dep__incl.md5  _face_8h__incl.map  _face_8h__incl.md5  _face_8h_source.html  _glm_utils_8h.html  _glm_utils_8h.js  _glm_utils_8h__dep__incl.map  _glm_utils_8h__dep__incl.md5  _glm_utils_8h__incl.map  _glm_utils_8h__incl.md5  _glm_utils_8h_source.html  _image_loader_8cpp.html  _image_loader_8cpp__incl.map  _image_loader_8cpp__incl.md5  _image_loader_8cpp_source.html  _image_loader_8h.html  _image_loader_8h__dep__incl.map  _image_loader_8h__dep__incl.md5  _image_loader_8h_source.html  _layer_8cpp.html  _layer_8cpp__incl.map  _layer_8cpp__incl.md5  _layer_8cpp_source.html  _layer_8h.html  _layer_8h__dep__incl.map  (+378 more)
docs/html/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enumvalues_0.js  (+52 more)
docs/html/latex/: _arg_parser_8h.tex  _arg_parser_8h__dep__incl.md5  _arg_parser_8h__incl.md5  _color_8h.tex  _color_8h__dep__incl.md5  _color_8h__incl.md5  _face_8h.tex  _face_8h__dep__incl.md5  _face_8h__incl.md5  _glm_utils_8h.tex  _glm_utils_8h__dep__incl.md5  _glm_utils_8h__incl.md5  _image_loader_8cpp.tex  _image_loader_8cpp__incl.md5  _image_loader_8h.tex  _image_loader_8h__dep__incl.md5  _layer_8cpp.tex  _layer_8cpp__incl.md5  _layer_8h.tex  _layer_8h__dep__incl.md5  _layer_8h__incl.md5  _material_8cpp.tex  _material_8cpp__incl.md5  _material_8h.tex  _material_8h__dep__incl.md5  _material_8h__incl.md5  _mesh_8cpp.tex  _mesh_8cpp__incl.md5  _mesh_8h.tex  _mesh_8h__dep__incl.md5  _mesh_8h__incl.md5  _normal_8h.tex  _normal_8h__dep__incl.md5  _normal_8h__incl.md5  _object_8cpp.tex  _object_8cpp__incl.md5  _object_8h.tex  _object_8h__dep__incl.md5  _object_8h__incl.md5  _object_loader_8cpp.tex  (+114 more)
models/: ballblue.mtl  ballcyan.mtl  ballgreen.mtl  ballpink.mtl  ballpurple.mtl  ballred.mtl  ballyellow.mtl  beachball.blend  beachball.mtl  cube.blend  cube.mtl  cube_simple.mtl  greenball.blend  greenball.mtl  ramp.blend  ramp.mtl  stage.blend  stage.blend1  stage.mtl
modules/: FindFreeImage.cmake
old/: ppm_to_mp4.sh  raytracer.cpp
shaders/: fragment.glsl  fs_font.glsl  vertex.glsl  vs_font.glsl
src/: ArgParser.h  BatchRenderer.cpp  BatchRenderer.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Face.h  Font.cpp  Font.h  Layer.cpp  Layer.h  PerformanceData.cpp  PerformanceData.h  PhysicsEngine.cpp  PhysicsEngine.h  ProgramConfig.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Terrain.h  TextWriter.cpp  TextWriter.h  Texture.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h  main.cpp
src/meshes/: Color.h  Face.h  Material.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Normal.h  Object.cpp  Object.h  ObjectLoader.cpp  ObjectLoader.h  Position.h  RigidObject.cpp  RigidObject.h  TexCoord.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
src/objects/: Material.cpp  Material.h  Mesh.h  Normal.h  Object.cpp  Object.h  ObjectLoader.cpp  Position.h  TexCoord.h
src/raytracer/: Raytracer.cpp  Raytracer.h  Sphere.h  Vector3.h
src/shapes/: Cube.cpp  Cube.h
src/utils/: GlmUtils.h  ImageLoader.cpp  ImageLoader.h
tests/: plot_physics_data.R  simple_ball_drop.c  sphere_120hz_600pts.csv  sphere_60hz_300pts.csv
tests/ffmpeg_test/: Makefile  main.c  out.mpeg  rgb2yuv.c  test-encode  test-rgb2yv  tmp.h264  tmp.mpg
